<resources>
    <string name="app_name">Nmedia</string>
    <string name="avatar_description">avatar</string>
    <string name="menu_button_description">Menu</string>
    <string name="like_button_description">Like</string>
    <string name="share_button_description">Share</string>
    <string name="viewed_description">Viewed</string>
    <string name="add_button_description">Add</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can not be empty</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="save_button_description">Save</string>
    <string name="chooser_share_post">Please, select the application</string>
    <string name="empty_state_view">No posts</string>
    <string name="play_button_description">Play</string>
    <string name="video_description">Video</string>
    <string name="error_video">Video not found</string>
    <string name="link_to_video">Link to video(optional)</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="retry_loading">Retry</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="link_to_avatar">Link to avatar photo</string>
    <string name="avatar_upload_button_description">Upload</string>
    <string name="error_title">Post not saved! Please try again.</string>
    <string name="notification_user_posted">User %1$s published a new post:</string>
</resources>